--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-plaid-link-sdk": "^8.0.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.8.4"
   },
