--- a/package.json
+++ b/package.json
@@ -17,18 +17,24 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.1",
+    "@types/react-native": "^0.72.3",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
+    "paths-js": "^0.4.11",
     "plaid": "^11.0.0",
+    "point-in-polygon": "^1.1.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-plaid-link-sdk": "^8.0.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.14.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.8.4"
   },
