--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Copy this file to .env and fill out each variable
-PLAID_CLIENT_ID=
-PLAID_SECRET=
+PLAID_CLIENT_ID=645915cf51760600127bcca9
+PLAID_SECRET= # GET THIS FROM PLAID DASHBOARD 
 PLAID_ENV=sandbox
 PLAID_SANDBOX_REDIRECT_URI=https://cdn-testing.plaid.com/link/v2/stable/sandbox-oauth-a2a-react-native-redirect.html
 PLAID_ANDROID_PACKAGE_NAME=com.tinyquickstartreactnative
+PLAID_PRODUCTS=auth, transactions, identity, assets
+PLAID_COUNTRY_CODE=US, CA
