--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "^3.18.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.14.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.8.4"
   },
@@ -46,6 +47,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react-native-vector-icons": "^6.4.16",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
