--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-pager-view": "^6.2.2",
     "react-native-plaid-link-sdk": "^8.0.0",
