--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.1",
@@ -33,13 +34,19 @@
     "react-native": "0.70.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.7.0",
+    "react-native-picker-select": "^8.1.0",
     "react-native-plaid-link-sdk": "^8.0.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.14.0",
+    "react-native-uuid": "^2.0.1",
+    "react-native-uuid-generator": "^6.1.1",
+    "react-native-vector-icons": "^10.0.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
