--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-firebase/firestore": "^18.6.1",
     "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/material-top-tabs": "^6.6.5",
-    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.1",
@@ -50,6 +51,7 @@
     "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^10.0.0",
     "react-scripts": "^5.0.1",
+    "reactfire": "^4.2.3",
     "typescript": "^4.8.4",
     "uuid": "^9.0.1"
   },
