--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ PLAID_CLIENT_ID=645915cf51760600127bcca9
 PLAID_SECRET= # GET THIS FROM PLAID DASHBOARD 
 PLAID_ENV=sandbox
 PLAID_SANDBOX_REDIRECT_URI=https://cdn-testing.plaid.com/link/v2/stable/sandbox-oauth-a2a-react-native-redirect.html
-PLAID_ANDROID_PACKAGE_NAME=com.tinyquickstartreactnative
+PLAID_ANDROID_PACKAGE_NAME=com.budgetbuddy
 PLAID_PRODUCTS=auth, transactions, identity, assets
 PLAID_COUNTRY_CODE=US, CA
